@@ -6,6 +6,7 @@ CHANGELOG
 This is a log of major user-visible changes in each phpMyFAQ release.
 
 Version 2.7.2 - 2011-12-
+- improved install script (Thorsten)
 - updated Finnish translation (Petteri Hirvonen, Niklas Lampén)
 - updated French translation (Cédric Frayssinet)
 - updated Chinese (Simplified) translation
